[gd_scene load_steps=6 format=3 uid="uid://dm22mk3qqk47r"]

[ext_resource type="Script" path="res://test/bezier_curve_test.gd" id="1_28hw6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ei1ty"]
albedo_color = Color(0.827451, 0, 0.831373, 1)

[sub_resource type="Curve3D" id="Curve3D_4rftv"]
bake_interval = 0.0001
_data = {
"points": PackedVector3Array(0, 0, 0, -0.0211191, -0.00989095, 0.197665, 0, 0, 0, -0.0422445, -0.0197849, 0.0112299, 0.0422318, 0.0197789, -0.0111881, 0, 0, 0.384159, -0.048174, -0.00988339, 0.0767567, 0.0481856, 0.00989132, -0.0767853, 0.196033, 0.0791319, 0.0760652, 0.0389471, -0.0197976, -0.0266123, -0.0389412, 0.0197877, 0.0266203, 0.196033, 0.0791319, 0.0924529, 0.0686526, -0.0692654, 0.0133082, 0, 0, 0, 0.0197659, 0.237471, 0.0924529),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hmom8"]
albedo_color = Color(0, 0.733333, 0.00784314, 1)

[sub_resource type="Curve3D" id="Curve3D_ld3op"]
bake_interval = 0.0001
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.384159, 0, 0, 0, 0, 0, 0, 0.196033, 0.0791319, 0.0760652, 0, 0, 0, 0, 0, 0, 0.196033, 0.0791319, 0.0924529, 0, 0, 0, 0, 0, 0, 0.0197659, 0.237471, 0.0924529, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="HecateBezierCurveTest" type="Node"]
script = ExtResource("1_28hw6")
curve_bake_interval = 0.0001

[node name="Marker3D" type="Marker3D" parent="."]

[node name="SmoothCurve" type="CSGPolygon3D" parent="."]
polygon = PackedVector2Array(-0.005, -0.005, -0.005, 0.005, 0.005, 0.005, 0.005, -0.005)
mode = 2
path_node = NodePath("Path3D")
path_interval_type = 1
path_interval = 0.01
path_simplify_angle = 0.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_ei1ty")

[node name="Path3D" type="Path3D" parent="SmoothCurve"]
visible = false
curve = SubResource("Curve3D_4rftv")

[node name="NonSmoothCurve" type="CSGPolygon3D" parent="."]
polygon = PackedVector2Array(-0.005, -0.005, -0.005, 0.005, 0.005, 0.005, 0.005, -0.005)
mode = 2
path_node = NodePath("Path3D")
path_interval_type = 1
path_interval = 0.01
path_simplify_angle = 0.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_hmom8")

[node name="Path3D" type="Path3D" parent="NonSmoothCurve"]
visible = false
curve = SubResource("Curve3D_ld3op")
